Fixed a bug where the revision button was not vertically aligned with page's title on edit entry pages

--- a/src/resources/css/source/cp.scss
+++ b/src/resources/css/source/cp.scss
@@ -192,6 +192,7 @@ body.mobile #container {
 #page-header #page-title { @include flex-grow(1); color: $submitcolor; }
 #page-header #page-title { overflow: hidden; text-overflow: ellipsis;  }
 #page-header #page-title h1 { line-height: 1.3; margin: 0; display: inline; white-space: nowrap; }
+#page-header #page-title .btn { vertical-align: bottom; }
 
 #page-header #extra-headers { flex-shrink: 0; }
 #page-header #extra-headers:after { @include clearafter; }
